syntax = "proto3";

package auth;

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
 
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accesstoken = 1;
  int32 id = 2; // AÃ±adido para devolver el ID del usuario
}


message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string nombre = 4;
  string apellido = 5;
  string telefono = 6;
  string direccion = 7;
  string referencias = 8;
  string tipo = 9;
}

message RegisterResponse {
  string message = 1;
}






